last minute changes with errors

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="btCloseListSightingComplete">close this list view</string>
     <string name="btShowSightingsComplete">sightings</string>
     <string name="btShowDevices">devices</string>
+    <string name="btShowSessions">sessions</string>
 
 </resources>
