* added export button without any behaviour as of yet * starting/stopping service with application * added toasts to service to document lifecycle * rescheduled wifi stuff to database version four * removed copies of list data from the list adapters, using internal list data instead

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="btShowSessions">sessions</string>
     <string name="cbAutoString">background scan</string>
     <string name="cbWifi">wifi</string>
+    <string name="btExport">export</string>
 
 </resources>
