getting ready to ask the user for confirmation before exporting entire db

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="cbWifi">wifi</string>
     <string name="btExport">export</string>
     <string name="btExit">exit</string>
+    <string name="btExportYes">yes</string>
+    <string name="btExportNo">no, cancel the export</string>
+    <string name="tvExportConfirmation">This will dump the entire database to the SD card as a timestamped .sqlite-file, do you wish to proceed?</string>
 
 </resources>
