--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,5 +29,9 @@
     <string name="labelListBTDevices">List of recently discovered unique bluetooth devices in decending order of their number of occurances.</string>
     <string name="labelListBTSessions">List of recently conducted bluetooth sessions with the most recent ones on top.</string>
     <string name="labelListBTSightings">List of recently recorded bluetooth sightings in chronological order.</string>
+    <string name="btBTDeviceSightings">list all sightings of this device</string>
+    <string name="btBTDeviceSessions">list the sessions containing this device</string>
+    <string name="btBTDevicePairing">try pairing with this device</string>
+    <string name="btBTDeviceExit">exit, doing nothing</string>
     
 </resources>
