--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="btBTSightingSessions">list of sessions where the device from this sighting was also sighted</string>
     <string name="btBTSightingSightings">list other sightings of the device from this sighting</string>
     <string name="btBTSightingExit">exit, do nothing</string>
+    <string name="btCalendar">calendar</string>
     
 </resources>
