--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="btCalendar">calendar</string>
     <string name="title_activity_activity_calendar">ActivityCalendar</string>
     <string name="tvCalendarLabel">Choose a new time and date to set system wide. This will update all time related database columns as well.</string>
-    <string name="tvCalendarDifference">this will be added to all time columns: %s</string>
+    <string name="tvCalendarDifference">%sms will be added to time columns.</string>
     <string name="btCalendarOkay">okay</string>
     <string name="btCalendarCancel">no, cancel</string>
 
