--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="tvCalendarDifference">%s milliseconds will be added to all time columns.</string>
     <string name="btCalendarOkay">okay</string>
     <string name="btCalendarCancel">no, cancel</string>
+    <string name="cbBt">bluetooth</string>
 
 </resources>
