--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,10 +10,11 @@
     <string name="btShowNetInfo">netInfo</string>
     <string name="btResetDb">reset db</string>
     <string name="btCloseListSightingComplete">close this list view</string>
-    <string name="btShowSightingsComplete">sightings</string>
-    <string name="btShowDevices">devices</string>
-    <string name="btShowSessions">sessions</string>
-    <string name="cbAutoScan">background scan</string>
+    <string name="btShowBtSightings">sightings</string>
+    <string name="btShowBtDevices">devices</string>
+    <string name="btShowBtSessions">sessions</string>
+    <string name="cbBtAuto">background bt scan</string>
+    <string name="cbWifiAuto">background wifi scan</string>
     <string name="cbWifi">wifi</string>
     <string name="btExport">export</string>
     <string name="btExit">exit</string>
