further steps in ui development for wifi information

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,14 +26,16 @@
     <string name="dialogExitTitle">Exit Confirmation</string>
     <string name="dialogExitYes">yes, please</string>
     <string name="dialogExitNo">no, not yet</string>
-    <string name="labelListBTDevices">List of recently discovered unique bluetooth devices in decending order of their number of total occurences.</string>
-    <string name="labelListBTDevicesSession">List of unique bluetooth devices discovered during session #%d in decending order of their number of total occurences.</string>
+    <string name="labelListBTDevices">List of recently discovered unique bluetooth devices in decending order of their number of total occurrences.</string>
+    <string name="labelListBTDevicesSession">List of unique bluetooth devices discovered during session #%d in decending order of their number of total occurrences.</string>
     <string name="labelListBTSessions">List of recently conducted bluetooth sessions with the most recent ones on top.</string>
     <string name="labelListBTSessionsDevice">List of bluetooth sessions containing device address [%s] with the most recent sessions ones on top.</string>
     <string name="labelListBTSightings">List of recently recorded bluetooth sightings in chronological order.</string>
     <string name="labelListBTSightingsSession">List of recorded bluetooth sightings during session #%d in chronological order.</string>
     <string name="labelListBTSightingsDevice">List of recently recorded sightings of bluetooth device address [%s] in chronological order.</string>
     <string name="labelListWifiSightings">List of recently recorded wifi sightings in chronological order.</string>
+    <string name="labelListWifiSessions">List of recently conducted wifi sessions with the most recent ones on top.</string>
+    <string name="labelListWifiDevices">List of recently discovered unique wifi devices in decending order of their number of total occurrences</string>
     <string name="btBTDeviceSightings">list all sightings of this device</string>
     <string name="btBTDeviceSessions">list the sessions containing this device</string>
     <string name="btBTDevicePairing">try pairing with this device</string>
